www/css/styles.css
/* Header-Font */
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

/* bodyFont */
@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap");

* {
  box-sizing: border-box;
}

body,
html {
  margin: 0 !important;
  padding: 0px !important;
  /* font-family: "Silkscreen"; */
  background-color: #ffffff;
  font-family: "Mulish", sans-serif;
  scroll-behavior: smooth;
}

html{
  /* overflow: hidden!important; */
}

img {
  max-width: 100%;
}

.lazy {
  display: none;
  opacity: 0;
}

/* -- always have latter code on css-->*/

/* splash-screen */

.v-splash{
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left:0;
  height: 100%;
  width: 100vw;
  z-index: 9999;
  background-color: #e2ddffc9;
  backdrop-filter: blur(29px);
  
}



/* style scroll bar */

/* width */
::-webkit-scrollbar {
  display: flex;
  position: relative !important;
  background-color: hsla(0, 0%, 9%, 0);
  width: 8px;
  height: 100%;
}

/* Track */
::-webkit-scrollbar-track {
  display: flex;
  background-image: linear-gradient(to top, #ffffff00, #ffffff00);
  box-shadow: 0 0 3px hsla(236, 15%, 35%, 0);
  border-radius: 10px;
  margin-top: 96px !important;
}

/* Handle */
::-webkit-scrollbar-thumb {
  display: flex !important;
  background-image: linear-gradient(to top, hsla(254, 35%, 30%, 0.2), hsla(254, 35%, 30%, 0.2));
  border-radius: 10px;
}

/* scroll-bar end */

body {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

/* F7-main-STYLES */
#app {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: fit-content;
  height: fit-content;
 
}

.view,
.view-main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 100vw;

  height: 100vh!important;
  padding: 0px !important;
  
  overflow: overlay;
  overflow-x: visible;
  scroll-behavior: smooth;

}


.page,
.page-content {
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  flex-direction: column;
  width: 100vw;
  min-width: 350px!important;
  height: 100vh;

  height: fit-content !important  ;
  scroll-behavior: smooth;
}

.page,
.page-current,
.page-homepage {
  position: relative;
}

.material-symbols-outlined {
  color: #8be9e9b7;
  font-size: 1.2rem !important;
  font-weight: 500 !important;
  margin: 0px;

  background-color: #85dcdc11;
  padding: 4px;
  border-radius: 4px;
}

/* Typography */

p {
  font-size: .95rem;
  font-weight: 500;
  line-height: 1.2rem;
  margin: 0px;
  padding: 0px;
  width: fit-content;
  font-family: "poppins";
  color: #f7f6ff;
}

.nav-title p {
  font-size: 1.1rem;
  font-weight: 600;
  color: var(--f7-theme-color);
  line-height: 1.2rem;
  margin: 0px;
  padding: 0px;
  width: fit-content;
  font-family: "poppins";
}


h1 {
  display: flex;
  white-space: nowrap;
  flex-direction: column;
  justify-content: flex-start;
  width: fit-content;
  height: fit-content;
  font-size: clamp(2.4rem, 2.99vw, 10rem);
  line-height: clamp(3.2rem, 3.8vw, 10rem);
  font-weight: 1000;
  color: var(--f7-theme-color-muted);
  padding: 0px;
  margin: 0px;
  /* border:solid #161124 1px; */

  text-align: center;
}

h3 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: fit-content;
  white-space: nowrap;
  font-size: clamp(1.3vw, 1.7vw, 3rem);
  line-height: 1.4rem;
  font-weight: 900;
  color: var(--f7-theme-color);
  padding: 0px;
  margin: 0px;
}
h4 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: fit-content;
  font-size: 1.4rem;
  line-height: 1.4rem;
  font-weight: 800;
  color: var(--f7-theme-color);
  padding: 0px;
  margin: 0px;
}

h5 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: fit-content;
  font-size: 1rem;
  line-height: 1rem;
  font-weight: 600;
  color: #ffffff;
  padding: 0px;
  margin: 0px;
}

/* navigation structure */

.navbar-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;

  position: fixed;

  width: 100%;
  height: fit-content;
  padding: 6px;

  margin: 0px;
  z-index: 999;
  background-image: linear-gradient(to top, #ffffff00, #ffffff);
  overflow: hidden;

}

.nav-bar {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: fit-content;
  border: solid 2px rgba(0, 0, 0, 0);
  padding: 10px;
  margin: 0px;
  border-radius: 16px;
  background-color: #ffffffd0;

  
  box-shadow: 0px 1px 6px rgba(47, 29, 130, 0.15);
  backdrop-filter: blur(29px);
}

.nav-logo {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 55px;
  height: 55px;
  aspect-ratio: 1 / 1;
  background-image: url(../img/VERAS-ICO.svg);
  background-size: contain;
  background-repeat: no-repeat;
  border-radius: 0px;
  padding: 0px;
  margin: 0px;
}

.nav-L {
  display: flex;
  align-items: center;
  grid-gap: 6px;
  justify-content: flex-start;
  width: 100%;
}
.nav-title {
  display: flex;
  align-items: center;
  justify-content: center;
}
.nav-R {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 100%;
}

.v-logo {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(255, 0, 0, 0);
  /* background-image: url(../img/logo.png); */
  background-size: contain;
  background-repeat: no-repeat;
  width: 100px;
  height: auto;
  aspect-ratio: 1/1;
}

.v-logo-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  grid-gap: 8px;
}
/* ... */

